[package]
name = "array_iter_tools"
version = "0.1.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Modify simple arrays"
license = "MIT"
readme = "README.md"
repository = "https://github.com/conradludgate/array_tools"
keywords = ["iterator", "no_std"]
categories = ["rust-patterns", "no-std"]

[dependencies]
array_builder = { version = "0.1.4", optional = true }

[features]
default = ["drop"]
drop = ["array_builder"]
